LE-37 Correct overly permissive use of 'specimen'